argocd/definitions/dynaflow/manifests/site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-service
  namespace: dynaflow
  labels:
    app: site
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site
  template:
    metadata:
      labels:
        app: site
    spec:
      containers:
      - name: site
        image: ghcr.io/radu-lzr/dynaflow/site:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: site-service
  namespace: dynaflow
spec:
  selector:
    app: site
  ports:
  - port: 80
    targetPort: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: site-route
  namespace: dynaflow
spec:
  parentRefs:
  - name: dynaflow-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/site
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /sites
    backendRefs:
    - name: site-service
      port: 80
